--- a/Info.plist
+++ b/Info.plist
@@ -21,11 +21,20 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>We use the camera to describe your environment.</string>
+	<string>We use the camera to describe your environment and identify objects to help with navigation and safety.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>We use the microphone to hear your voice.</string>
+	<string>We use the microphone to hear your voice commands and questions.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Speech recognition is used for voice commands.</string>
+	<string>Speech recognition enables offline voice commands and improved accessibility.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location services help provide navigation assistance and describe your current surroundings.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location services enable navigation assistance and location-aware features for blind users.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>location</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
